Sat Sep 22 07:14:39 UTC 2007 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>

 * drivers/megatec_usb.c: merged Arjen de Corte's changes in krauler
   subdriver with slight modifications:
   - commands are now stored in a table, making it simplier to process
     them
   - switched to libusb.c API completely

Mon Sep 17 19:09:47 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - data/cmdvartab, docs/new-names.txt: Removed "shutdown.restart".
 * drivers/usbhid-ups.c:
   - Corrected shutdown function (should fallback to 'shutdown.reboot',
     not 'shutdown.return').
   - Renamed 'shutdown.restart' to 'shutdown.return', which almost has
     the same meaning, with the exception that it doesn't shutdown the
     UPS.
 * drivers/<usbhid-ups subdrivers>:
   - Implemented the above.

Mon Sep 17 11:33:17 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - clients/upscmd.c: Allow passing an additional parameter in a command.
 - drivers/dstate.c: It is now possible to pass a parameter to instcmd(),
   for instance a delay value.
 - scripts/subdriver/path-to-subdriver.sh: Implemented the above.
 * drivers/usbhid-ups.[ch]:
   - Implemented the above. If no parameter is passed, the default from
     the HID-to-NUT mapping is used (as was the case previously).
   - The main driver now takes care of shutting down the UPS through
     instcmd's that are configurable in the subdrivers. This makes sure
     that the behaviour is consistent among subdrivers and meets the
     expectations of the NUT shutdown/restart mechanism.
   - DEFAULT_ONDELAY and DEFAULT_OFFDELAY are now much shorter. If an
     application needs a grace period before shutting down the UPS, it
     this should be put 'ups.conf', rather than to make this the
     default (even for configurations where this is not needed at all).
 * drivers/<usbhid-ups subdrivers>:
   - Implemented the above. Added "shutdown.restart", "shutdown.stayoff"
     and "shutdown.return" instcmd, which feed the shutdown function in